src/test-c/test_fail/error/defined_func.c
int toto(){
    return 1;
}

int toto(){
    return 0;
}

int main(){
    return toto();
}